<resources>
    <string name="app_name">Tonight</string>
    <string name="webserver">http://debuck.info/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Se connecter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Cette adresse email est incorrecte</string>
    <string name="error_invalid_password">Le mot de passe est trop court (min 8 car.)</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Vous devez remplir ce champ</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="event_detail_subscribe">S\'inscrire</string>
    <string name="event_detail_unsubscribe">Se désinscrire</string>
    <string name="title_activity_description">Informations</string>
    <string name="drawer_connect">Se connecter</string>
    <string name="prompt_name">Prénom</string>
    <string name="prompt_last_name">Nom</string>
    <string name="auth_url">http://debuck.info/tonight/authenticate.php</string>
    <string name="title_activity_login2">Connexion</string>
    <string name="auth_success">Connexion réussie.</string>
    <string name="drawer_disconnect">Se déconnecter</string>
    <string name="title_activity_profile">Mon profil</string>
    <string name="menu_drawer_params">Paramètres</string>
    <string name="menu_drawer_events">Mes inscriptions</string>
    <string name="menu_drawer_profile">Mon profil</string>
    <string name="main_error_not_connected">Vous n\'êtes pas connecté. Connectez-vous pour créer un
        évènement.</string>
    <string name="add_event_title">Titre de l\'évènement</string>
    <string name="add_event_create">Créer l\'évènement</string>
    <string name="add_event_activity_label">Créer un évènement</string>
    <string name="add_choose_price">Définissez le prix (€)</string>
    <string name="add_choose_price_confirm">Confirmer</string>
    <string name="add_choose_price_cancel">Annuler</string>
    <string name="add_choose_pic">Choisissez une photo</string>
    <string name="add_event_max_people">Nombre max. de part.</string>
    <string name="add_event_end_hour">h de fin (facult.)</string>
    <string name="ev_detail_free">Gratuit</string>
    <string name="add_event_check_all_day">Toute la journée</string>
    <string name="place_details"><![CDATA[&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id:
    %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s]]></string>
    <string name="drawer_register">S\'inscrire</string>
    <string name="auth_disconnect_success">Vous avez été déconnecté.</string>
    <string name="subscribe_activity_label">S\'inscrire</string>
    <string name="subscribe_subtitle">\"Gardez tous les évènements autour de vous à portée de main\"
    </string>
    <string name="subscribe_instruction">Remplissez les champs ci-dessous. Vous pourrez dès lors créer
        vos propres évènements, avoir une liste personnalisée à vos envies, voir ce que font vos amis
        et bien plus !</string>
    <string name="prompt_firstName">Prénom</string>
    <string name="subscribe_action_register">S\'inscrire</string>
    <string name="subscribe_error_empty">Ce champ ne peut pas être vide.</string>
    <string name="subscribe_url">http://debuck.info/tonight/addUser.php</string>
    <string name="auth_subscribe_success">Votre compte a été créé, vous êtes à présent connecté.</string>
    <string name="isLocationRightURL">http://debuck.info/tonight/isLocationRight.php</string>
    <string name="add_event_error_location">Cette ville n\'est pas autorisée pour le moment, veuillez changer d\'adresse.</string>
    <string name="add_event_error_network">Il y a eu un problème avec la connexion au serveur.</string>
    <string name="uploadEventLocationURL">http://debuck.info/tonight/addEventLocation.php</string>
    <string name="uploadEventURL">http://debuck.info/tonight/addEvent.php</string>
    <string name="add_event_error_fill_all">Veuillez remplir tous les champs.</string>
    <string name="subscribe_event_url">http://debuck.info/tonight/subscribe.php</string>
    <string name="event_detail_error_network">Une erreur est survenue lors de la connexion réseau.</string>
    <string name="event_detail_not_auth">Veuillez vous connecter pour continuer.</string>
    <string name="is_subscribe_event_url">http://debuck.info/tonight/isSubscribed.php</string>
    <string name="add_event_illimited_people">Participants illimités</string>
    <string name="subscribed_event_activity_label">Mes inscriptions</string>
    <string name="menu_drawer_events_created">Mes créations</string>
    <string name="created_event_activity_label">Mes créations</string>
    <string name="title_activity_profile_and_friends">Informations du compte</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="profile_tab_profile">Profil</string>
    <string name="profile_tab_friends">Amis</string>
    <string name="empty_text">Il n\'y rien à voir ici.</string>
    <string name="url_event_foreign_keys">http://debuck.info/tonight/getForeignKeysEvent.php</string>
    <string name="event_category_cultural">Culturel</string>
    <string name="event_category_music">Musique</string>
    <string name="event_category_workshop">Atelier</string>
    <string name="event_category_nightlife">Soirée</string>
    <string name="event_category_bar">Bar / Restaurant</string>
    <string name="event_category_festival">Festival</string>
    <string name="event_category_meeting">Réunion</string>
    <string name="event_category_other">Autre</string>
    <string name="login_instruction">Entrez vos informations de connexion.</string>
    <string name="register_user_email_taken">Cette adresse email est déjà utilisée.</string>
    <string name="add_event_created">Votre évènement a été créé.</string>
    <string name="add_event_not_created">Votre évènement n\'a pas pu être créé.</string>
    <string name="ev_desc_express_yourself">Exprimez-vous</string>
    <string name="send">Envoyer</string>
    <string name="login_authenticated">Vous êtes connecté en tant que</string>
    <string name="login_error">Erreur de connexion.</string>
    <string name="user_profile_anonymous">Anonyme</string>
    <string name="user_profile_user">Utilisateur</string>
    <string name="user_profile_enterprise">Entreprise</string>
    <string name="user_profile_administrator">Administrateur</string>
    <string name="add_event_post_empty">Veuillez écrire un message à envoyer.</string>
    <string name="add_event_post_url">http://debuck.info/tonight/addPostToEvent.php</string>
    <string name="event_detail_post_added">Votre message a été posté.</string>
    <string name="get_user_url">http://debuck.info/tonight/getUser.php</string>
    <string name="add_event_post_error_posting">Impossible d\'envoyer ce message.</string>
    <string name="title_activity_change_picture_profile">Changer ma photo</string>
    <string name="change_profile_picture_title">Changer ma photo de profil.</string>
    <string name="change_profile_picture_subtitle">Cliquez pour choisir votre nouvelle photo de profil.</string>
    <string name="change_profile_picture_validate">Changer ma photo</string>
    <string name="change_profile_picture_upload_url">http://debuck.info/tonight/uploadProfilePicture.php</string>
    <string name="change_profile_picture_choose_picture">Choisissez une photo</string>
    <string name="change_profile_picture_loading_title">Téléversement de l\'image</string>
    <string name="change_profile_picture_loading_subtitle">Veuillez patienter…</string>
    <string name="change_profile_picture_update">Votre photo de profil a été correctement mise à jour.</string>
    <string name="change_profile_picture_upload_error">Erreur lors de la mise à jour de votre photo de profil. Veuillez réessayer.</string>
    <string name="drawer_my_account">Mon compte</string>
    <string name="search_title">Rechercher un évènement</string>
    <string name="search_hint">Rechercher un évènement</string>
    <string name="add_event_error_select_address">Veuillez indiquer l\'adresse.</string>
    <string name="add_event_error_write_title">Veuillez donner un nom.</string>
    <string name="add_event_error_write_description">Décrivez votre évènement.</string>
    <string name="add_event_upload_picture_url">http://debuck.info/tonight/uploadEventPicture.php</string>
    <string name="add_event_error_uploading_picture">Erreur lors de l\'envoi de votre image.</string>
    <string name="add_event_progress_title">Création de votre évènement</string>
    <string name="add_event_progress_subtitle">Veuillez patienter...</string>
    <string name="add_event_error_no_picture">Veuillez sélectionner une photo pour votre évènement.</string>
    <string name="url_event_by_id">http://debuck.info/tonight/getSpecificEvent.php</string>
    <string name="event_no_participant">Pas de participants</string>
    <string name="get_user_subscribed_url">http://debuck.info/tonight/getEventSubscribedUsers.php</string>
    <string name="event_detail_more_users">+ %d inscrit</string>
    <string name="title_activity_subscribed_users">Participants</string>
    <string name="url_user_friends">http://debuck.info/tonight/getUserFriends.php</string>
    <string name="no_friends_text">Vous n\'avez pas encore d\'amis.</string>
    <string name="profile_tab_my_profile">Mon profil</string>
    <string name="profile_tab_my_friends">Mes amis</string>
    <string name="profile_is_not_my_friend">Vous n\'êtes pas amis.</string>
    <string name="profile_add_as_friend">Ajouter comme ami</string>
    <string name="profile_remove_as_friend">Supprimer cet ami</string>
    <string name="url_get_friendship_status">http://debuck.info/tonight/userIsFriendWith.php</string>
    <string name="profile_is_my_friend">Vous êtes amis</string>
    <string name="url_add_friend">http://debuck.info/tonight/addFriend.php</string>
    <string name="profile_friend_request_sent">Demande d\'amitié envoyée</string>
    <string name="profile_friend_request_sent_correctly">Demande d\'amitié envoyée.</string>
    <string name="profile_friend_request_send_error">Impossible d\'ajouter cette personne pour le moment.</string>
    <string name="report_abuse">Signaler cet évènement</string>
    <string name="dialog_report_event_title">Signaler un évènement</string>
    <string name="dialog_report_event_subtitle">Prévenez les organisateurs si cet évènement réflète un contenu choquant ou innaproprié. Les signalements sont anonymes. Tout abus est passible de sanction.</string>
    <string name="dialog_report_event_button_report">Signaler</string>
    <string name="dialog_report_event_button_cancel">Annuler</string>
    <string name="event_modify">Modifier cet évènement</string>
    <string name="edit_event_activity_title">Modifier l\'évènement</string>
    <string name="dialog_filter_event_title">Filtrer les évènements</string>
    <string name="dialog_filter_event_subtitle">Vous pouvez choisir quels évènements afficher en modifiant les options ci-dessous.</string>
    <string name="dialog_filter_event_by_price">Prix (€):</string>
    <string name="dialog_filter_event_by_distance">Distance (km):</string>
    <string name="dialog_filter_event_by_category">Catégorie:</string>
    <string name="dialog_filter_event_by_default">Remettre par défaut</string>
    <string name="dialog_filter_event_min_price">0</string>
    <string name="dialog_filter_event_max_price">100+</string>
</resources>