<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_drawer_events" />
        <item
            android:id="@+id/nav_event_created"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_drawer_events_created" />

    <item android:title="@string/drawer_my_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_box"
                android:title="@string/menu_drawer_profile" />
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_lock"
                android:title="@string/drawer_disconnect" />
        </menu>
    </item>

</menu>
