<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:useravatar="http://schemas.android.com/apk/res-auto"
    tools:context="info.debuck.tonight.ChangeProfilePictureActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/firstRow"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <info.debuck.tonight.EventClass.UserAvatar
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/profile_picture"
                android:src="@drawable/ic_account_circle"
                useravatar:ua_border="true"
                useravatar:ua_border_color="#EEEEEE"
                useravatar:ua_border_width="2dp"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pictureRotate"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_rotate_right_white"
                android:layout_marginLeft="@dimen/marginBig"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/change_profile_picture_title"
                android:id="@+id/profile_name"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/marginSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/change_profile_picture_subtitle"
                android:id="@+id/profile_profile"
                android:textColor="@color/colorPrimaryLight"
                android:layout_gravity="center_horizontal" />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/secondRow">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/changeGallery"
                android:layout_weight="1"
                android:src="@drawable/ic_insert_photo"
                android:tint="@color/white" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/changeCamera"
                android:layout_weight="1"
                android:src="@drawable/ic_add_a_photo"
                android:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/thirdRow">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_profile_picture_validate"
                android:id="@+id/validate"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginSmall" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeProgressBar"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
